# django-draft

./: .gitignore  README.md  db.sqlite3  pyproject.toml
cart/: admin.py  forms.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_remove_cart_products_remove_cart_total_cart_number_and_more.py  0003_remove_cart_subtotal_alter_cart_customer.py
cart/templates/: cart-view.html  cart.html  cart_view.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_cart_cartproduct_cart_products.py  0003_remove_cartproduct_cart_remove_cartproduct_product_and_more.py  0004_category_description_category_supercategory_review.py  0005_alter_category_supercategory.py  0006_product_image.py  0007_alter_review_product.py  0008_alter_review_product.py  0009_product_stock.py  0010_remove_product_available.py
catalog/templates/: catalog.html  category.html  product.html  search-results.html
config/: asgi.py  context_processor.py  settings.py  urls.py  wsgi.py
config/templates/: base.html  bootstrap.html
customer/: admin.py  authorizations.py  forms.py  models.py  urls.py  validators.py  views.py
customer/migrations/: 0001_initial.py  0002_remove_customerprofile_address_staffprofile_address.py  0003_delete_staffprofile.py  0004_address_created_address_last_updated.py  0005_alter_customerprofile_phone_number.py  0006_customerprofile_products.py  0007_address_name.py  0008_alter_customerprofile_date_of_birth.py  (+1 more)
homepage/: views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
(+34 files in other folders)
