[tool.poetry]
name = "e-commerce"
version = "1.0.0"
description = ""
authors = ["Paula Ferreira <paulakaferreira@gmail.com>", "Gabriel Menevis <gabriel.menevis@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pillow = "^9.5.0"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
