[tool.poetry]
name = "e-commerce"
version = "1.0.0"
description = ""
authors = ["Paula Ferreira <paulakaferreira@gmail.com>", "Gabriel Menevis <gabriel.menevis@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pillow = "^9.5.0"
django-bootstrap-v5 = "^1.0.11"
django-extensions = "^3.2.3"
pydotplus = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
